--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cm-init</title>
+    <!-- meta name="robots" content="index, follow" / -->
+    <meta name="description" content="You have a web project in need of developers, you have a podcast to record, you have a digital creative team to support. Let's talk about what you want to get done." />
+    <meta name="keywords" content="interactive, sound, front end development, ux, ux strategy, wordpress, wordpress customization, css, sass, team support, portland, portland or, pdx, cruzat" />
+    <meta property="og:title" content="Cruzat.Media // Interactive & Sound" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://cruzat.media" />
+    <meta property="og:image" content="<%= BASE_URL %>cm-social.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    <link rel="icon" href="<%= BASE_URL %>icon-cm-y.png">
+    <title>Cruzat.Media // Interactive & Sound</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but cm-init doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this ting doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
