add og:description cloning meta desc

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="interactive, sound, front end development, ux, ux strategy, wordpress, wordpress customization, css, sass, team support, portland, portland or, pdx, cruzat" />
     <meta property="og:title" content="Cruzat.Media // Interactive & Sound" />
     <meta property="og:type" content="website" />
+    <meta property="og:description" content="You have a web project in need of developers, you have a podcast to record, you have a digital creative team to support. Let's talk about what you want to get done." />
     <meta property="og:url" content="http://cruzat.media" />
     <meta property="og:image" content="<%= BASE_URL %>cm-social.png" />
     <meta property="og:image:width" content="1200" />
